syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  repeated HibpCase hibp_cases = 1;
}

message HibpCase {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
        description: "An HIBP Case."
        required: ["name"]
    }
    example: "{\"name\": \"Adobe\"}"
  };
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "A name."}];
}